# bycoders_teste

./: .env.example  .gitignore  Dockerfile  README.MD  docker-compose.yml  main.py  makefile  pyproject.toml
src/app/api/: controller.py  model.py  route.py
src/app/auth/: controller.py  route.py
src/system/core/: logger_core.py  redis_core.py
src/system/integrations/: api_coin_gecko.py  api_cotacao.py  api_store_mercado_bitcoin.py
