[tool.poetry]
name = "teste-manoel"
version = "0.1.0"
description = ""
authors = ["Manoel Messias <manoelmsnsi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pydantic = "^2.7.4"
python-dotenv = {extras = ["cli"], version = "^1.0.1"}
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
curl-cffi = "^0.7.3"
redis = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
